siduxcc (0.9.23) UNRELEASED; urgency=low

  [ Stefan Lippers-Hollmann ]
  * NOT RELEASED YET

  [ Fabian Wuertz ]
  * empty icons folders removed

 -- Fabian Wuertz <xadras@sidux.com>  Thu, 06 Mar 2008 01:50:11 +0100

siduxcc (0.9.22) unstable; urgency=low

  * all icons moved to the icon folder
  * cli: display: fix-res problem solved

 -- Fabian Wuertz <xadras@sidux.com>  Tue, 04 Mar 2008 00:30:13 +0100

siduxcc (0.9.21) unstable; urgency=low

  [ Bernard Gray ]
  * add kde3/4 compatible red (notok) and green (ok) 'S' icons 
  * remove dependency on sidux font
  * add correct manual logo
  * add alternative available updates logo candidate
  * add ok/notok bitmap icon export to debian/rules 

  [ Stefan Lippers-Hollmann ]
  * regenerate PNG icons.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Mon, 03 Mar 2008 15:46:50 +0100

siduxcc (0.9.20) unstable; urgency=low

  [ Fabian Wuertz ]
  * debian: rules updated for the new hermes icon 

  [ Stefan Lippers-Hollmann ]
  * fix debian/rules syntax.
  * generate icons from svg.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Mon, 03 Mar 2008 00:17:12 +0100

siduxcc (0.9.19) unstable; urgency=low

  * make sure to distinguish new siduxcc versions from old ones.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sun, 02 Mar 2008 23:59:06 +0100

siduxcc (0.9.18) unstable; urgency=low

  [ Bernard Gray ]
  * make siduxcchermes-candidate.svg the core siduxcchermes icon
  * remove extraneous unused svg icons

  [ Fabian Wuertz ]
  * hermes timer set to 30min 

  [ Stefan Lippers-Hollmann ]
  * regenerate icons from source.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sun, 02 Mar 2008 23:13:28 +0100

siduxcc (0.9.17) unstable; urgency=low

  * kde: kernel: design updated
  * credits: cleary added
  * typo

 -- Fabian Wuertz <xadras@sidux.com>  Thu, 28 Feb 2008 00:25:36 +0100

siduxcc (0.9.16) unstable; urgency=low

  * minimal ja font for kde does not support font used on window title so
    changed to plain english (muchan)
